--- a/style.css
+++ b/style.css
@@ -12,10 +12,10 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-      -webkit-box-shadow:inset 0px 0px 0px 20px #9b4637;
-    -moz-box-shadow:inset 0px 0px 0px 20px #9b4637;
-    box-shadow:inset 0px 0px 0px 20px #9b4637;
-  background-color: #16161a;
+      -webkit-box-shadow:inset 0px 0px 0px 20px #2c2f33;
+    -moz-box-shadow:inset 0px 0px 0px 20px #2c2f33;
+    box-shadow:inset 0px 0px 0px 20px #2c2f33;
+  background-color: #23272a;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -44,12 +44,12 @@ body {
   text-align: center;
 }
 .snake-title {
-  color: #9b4637;
+  color: #2c2f33;
   font: 300 2em 'Press Start 2P', serif;
   margin: 0 auto;
 }
 .snake-p {
-  color: #d58e5e;
+  color: #fdfdfd;
   margin-bottom: 0;
 }
 .snake {
@@ -58,7 +58,7 @@ body {
   background-color: #fff;
 }
 .snake-score-p, .snake-high-score-p {
-  color: #d58e5e;
+  color: #7289da;
   text-decoration: underline;
 }
 .snake-score, .snake-high-score {
@@ -68,11 +68,11 @@ body {
   font-size: 2rem;
 }
 #snakeGame {
-  background-color: #9b4637;
+  background-color: #2c2f33;
   margin: 0 auto;
   align-self: center;
   order: 1;
-  border: 20px solid #d58e5e;
+  border: 20px solid #7289da;
 }
 /* Control Buttons */
 .controls {
@@ -83,18 +83,18 @@ body {
 .control-button {
   width: 50px;
   height: 50px;
-  background-color: #d58e5e;
+  background-color: #7289da;
   margin: 0px auto;
-  color: #9b4637;
+  color: #2c2f33;
   display: flex;
   align-items: center;
   cursor: pointer;
   transition: s background-color ease, 0.5s color ease;
-  box-shadow: 0px 5px 0px #9b4637;
+  box-shadow: 0px 5px 0px #2c2f33;
 }
 .control-button:hover {
-  background-color: #9b4637;
-  color: #d58e5e;
+  background-color: #2c2f33;
+  color: #7289da;
 }
 .control-button i {
   margin: 0 auto;
@@ -109,7 +109,7 @@ body {
 }
 .game-over-play-button {
     font-size: 1.5rem;
-  color: #9b4637;
+  color: #7289da;
   font-family: 'Press Start 2P';
   background-color: transparent;
   border: none;
