--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
   text-align: center;
 }
 .snake-title {
-  color: #2c2f33;
+  color: #7289da;
   font: 300 2em 'Press Start 2P', serif;
   margin: 0 auto;
 }
